--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1"
+    "node-sass": "^7.0.1",
+    "prettier": "^2.5.1",
+    "sass-loader": "^13.0.0"
   }
 }
